added a footer to every page

--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -261,90 +261,101 @@
 
       <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
     </div>
-  </div>
+    <!-- FOOTER -->
+    <hr class="featurette-divider">
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+        &middot; <a href="FAQ">Support</a></p>
+      </footer>
+      
+    </div>
 
 
 
 
 
-  <!-- <div class="col-md-2 col-md-offset-10">   -->
-  <div id="midCol" class="col-md-2" data-spy="affix">
+    <!-- <div class="col-md-2 col-md-offset-10">   -->
+    <div id="midCol" class="col-md-2" data-spy="affix">
 
-    <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
-    <!-- The boxes on the right this time-->
-    <!-- a main one -->
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="panel">
-          <div class="panel-heading">
-            <div class="row">
+      <!-- <div class="span2 col-md-2 col-md-offset-10">   -->
+      <!-- The boxes on the right this time-->
+      <!-- a main one -->
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel">
+            <div class="panel-heading">
+              <div class="row">
 
-              <div class="col-xs-12 text-left">
+                <div class="col-xs-12 text-left">
 
-               <p id ="verified" class="announcement-heading"></p>
-               <hr>
+                 <p id ="verified" class="announcement-heading"></p>
+                 <hr>
 
-               <p id ="funds_raised" class="announcement-heading"></p>
-               <p class="announcement-text">Funds raised</p>
+                 <p id ="funds_raised" class="announcement-heading"></p>
+                 <p class="announcement-text">Funds raised</p>
 
-               <p id="price_per_piece_current" class="announcement-heading"></p>
-               <p class="announcement-text">Price per piece</p>
+                 <p id="price_per_piece_current" class="announcement-heading"></p>
+                 <p class="announcement-text">Price per piece</p>
 
-               <p id="backers_current_count" class="announcement-heading"></p>
-               <p class="announcement-text">Backers</p>
+                 <p id="backers_current_count" class="announcement-heading"></p>
+                 <p class="announcement-text">Backers</p>
 
-               <p id="creators_safety_current" class="announcement-heading"></p>
-               <p class="announcement-text">Safety rating    <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
-                 <i class="fa fa-info-circle"></i></a></p>
+                 <p id="creators_safety_current" class="announcement-heading"></p>
+                 <p class="announcement-text">Safety rating    <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
+                   <i class="fa fa-info-circle"></i></a></p>
 
-                 <p>
-                   <div style="display:inline-block;" class="announcement-heading" id="pieces_held_current"></div>
-                   <div style="display:inline-block;" class="announcement-heading">/</div>
-                   <div style="display:inline-block;" class="announcement-heading" id="pieces_available_current"></div>
-                 </p>
-                 <p class="announcement-text">Pieces held</p>
+                   <p>
+                     <div style="display:inline-block;" class="announcement-heading" id="pieces_held_current"></div>
+                     <div style="display:inline-block;" class="announcement-heading">/</div>
+                     <div style="display:inline-block;" class="announcement-heading" id="pieces_available_current"></div>
+                   </p>
+                   <p class="announcement-text">Pieces held</p>
 
-                 <p id ="worth_current" class="announcement-heading"></p>
-                 <p class="announcement-text">Worth</p>
+                   <p id ="worth_current" class="announcement-heading"></p>
+                   <p class="announcement-text">Worth</p>
 
-                 <p id="rewards_current_yield" class="announcement-heading"></p>
-                 <p class="announcement-text">Reward yield(est)</p>
+                   <p id="rewards_current_yield" class="announcement-heading"></p>
+                   <p class="announcement-text">Reward yield(est)</p>
 
-                 <p id="rewards_current" class="announcement-heading"></p>
-                 <p class="announcement-text">Reward / piece / year</p>
+                   <p id="rewards_current" class="announcement-heading"></p>
+                   <p class="announcement-text">Reward / piece / year</p>
 
-                 <p id="rewards_paid" class="announcement-heading"></p>
-                 <p class="announcement-text">Rewards paid</p>
-
-
-
-                 <p id="creators_reputation" class="announcement-heading"></p>
-                 <p class="announcement-text">Reputation</p>
+                   <p id="rewards_paid" class="announcement-heading"></p>
+                   <p class="announcement-text">Rewards paid</p>
 
 
+
+                   <p id="creators_reputation" class="announcement-heading"></p>
+                   <p class="announcement-text">Reputation</p>
+
+
+                 </div>
                </div>
              </div>
-           </div>
-           <a href="creator_overview" rel="keep-params">
-            <div class="panel-footer announcement-bottom">
-              <div class="row">
-                <div class="col-xs-6">
-                  View Overview
-                </div>
-                <div class="col-xs-6 text-right">
-                  <i class="fa fa-arrow-circle-right"></i>
+             <a href="creator_overview" rel="keep-params">
+              <div class="panel-footer announcement-bottom">
+                <div class="row">
+                  <div class="col-xs-6">
+                    View Overview
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <i class="fa fa-arrow-circle-right"></i>
+                  </div>
                 </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
       </div>
+
+
     </div>
 
 
   </div>
 </div>
-</div>
+
 
 <!-- Modals -->
 <div id="bidModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
@@ -432,8 +443,11 @@
 
      </div>
 
+
    </div>
+
  </div>
+
 </div>
 <div id="buyModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -803,7 +817,10 @@
         </div>
 
       </div>
+
     </div>
+
+
   </div>
 
 
