--- a/resources/stage/web/userdashboard_overview.html
+++ b/resources/stage/web/userdashboard_overview.html
@@ -70,7 +70,7 @@
                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-                             <li class="dropdown">
+               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="about">About Bitpieces</a></li>
@@ -176,12 +176,12 @@
     </div>
 
     <div class="row">
-    <div class="col-lg-3">
-      <div class="first-timers alert alert-warning alert-dismissible hide" role="alert">
-        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <strong>You have no pieces!</strong> <a href="discover">Discover</a> some creators to fund.
+      <div class="col-lg-3">
+        <div class="first-timers alert alert-warning alert-dismissible hide" role="alert">
+          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <strong>You have no pieces!</strong> <a href="discover">Discover</a> some creators to fund.
+        </div>
       </div>
-    </div>
     </div>
 
 
@@ -427,10 +427,18 @@
 
       </div>
     </div>
-
+    <!-- FOOTER -->
+    <hr class="featurette-divider">
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+        &middot; <a href="FAQ">Support</a></p>
+      </footer>
+      
+    </div>
+    <!-- end of wrapper -->
+    
   </div>
-  <!-- end of wrapper -->
-</div>
 </div>
 <!-- Modals -->
 <div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
