--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -390,20 +390,32 @@
             <a href="#how_do_i_know_if_a_creator_is_safe">5 pillars of security</a>. To test Bitpieces 
             in a no-money, completely risk-free testing environment, head over to our <a href="#">test site</a>, 
             where you can simulate user and creator accounts, with no real money involved.
-             <hr class="col-md-12">
+            <hr class="col-md-12">
           </div>
 
           <div id="where_do_i_report_issues" style="min-height:500px;">
             <h2 class="">Where do I report issues?</h2>
             Issues can be reported on the Bitpieces <a href="https://github.com/tchoulihan/bitpieces">github</a> repository.
           </div>
+
+          <!-- FOOTER -->
+          <hr class="featurette-divider">
+          <footer>
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+              &middot; <a href="FAQ">Support</a></p>
+            </footer>
+            
+          </div>
+
         </div>
+
+
       </div>
+
+
+
     </div>
-
-
-
-  </div>
 
 
 
