--- a/resources/stage/web/about.html
+++ b/resources/stage/web/about.html
@@ -141,8 +141,15 @@
        </div>
      </div>
 
-
-   </div>
+     <!-- FOOTER -->
+     <hr class="featurette-divider">
+     <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+        &middot; <a href="FAQ">Support</a></p>
+      </footer>
+      
+    </div>
 
 
 
