--- a/resources/stage/web/creator_funds.html
+++ b/resources/stage/web/creator_funds.html
@@ -258,6 +258,16 @@
   </div>
 
 </div><!-- /.row -->
+
+<!-- FOOTER -->
+<hr class="featurette-divider">
+<footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+    &middot; <a href="FAQ">Support</a></p>
+  </footer>
+
+  
 </div>
 
 <!-- Modals -->
@@ -455,13 +465,13 @@
               <span id="askSymbol" class="input-group-addon">$</span>             
               <input name="ask" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
 
-            data-bv-notempty="true"
-            data-bv-notempty-message="Must be > 0"
+              data-bv-notempty="true"
+              data-bv-notempty-message="Must be > 0"
 
-            data-bv-greaterthan="true"
-            data-bv-greaterthan-inclusive="false"
-            data-bv-greaterthan-value="0"
-            data-bv-greaterthan-message="Must be > 0" 
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-inclusive="false"
+              data-bv-greaterthan-value="0"
+              data-bv-greaterthan-message="Must be > 0" 
 
               >
               <span class="input-group-addon">per piece</span>
@@ -542,14 +552,14 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
             <div class="col-sm-10">
               <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last price"
-           
-            data-bv-notempty="true"
-            data-bv-notempty-message="Must be > 0"
 
-            data-bv-greaterthan="true"
-            data-bv-greaterthan-inclusive="false"
-            data-bv-greaterthan-value="0"
-            data-bv-greaterthan-message="Must be > 0" 
+              data-bv-notempty="true"
+              data-bv-notempty-message="Must be > 0"
+
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-inclusive="false"
+              data-bv-greaterthan-value="0"
+              data-bv-greaterthan-message="Must be > 0" 
 
               >
             </div>
@@ -698,14 +708,14 @@
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
             <div class="col-sm-10">
               <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="Last reward"
-    
-            data-bv-notempty="true"
-            data-bv-notempty-message="Must be > 0"
 
-            data-bv-greaterthan="true"
-            data-bv-greaterthan-inclusive="false"
-            data-bv-greaterthan-value="0"
-            data-bv-greaterthan-message="Must be > 0" 
+              data-bv-notempty="true"
+              data-bv-notempty-message="Must be > 0"
+
+              data-bv-greaterthan="true"
+              data-bv-greaterthan-inclusive="false"
+              data-bv-greaterthan-value="0"
+              data-bv-greaterthan-message="Must be > 0" 
 
               >
             </div>
@@ -720,7 +730,7 @@
     </div>
   </div>
 
-<!-- end of wrapper -->
+  <!-- end of wrapper -->
 </div>
 
 
