--- a/resources/stage/web/creator_overview.html
+++ b/resources/stage/web/creator_overview.html
@@ -278,9 +278,14 @@
   </div>
 </div>
 
-
-
-<!-- The main body -->
+ <!-- FOOTER -->
+ <hr class="featurette-divider">
+ <footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+    &middot; <a href="FAQ">Support</a></p>
+  </footer>
+  
 
 
 
