--- a/resources/stage/web/creator_rewards.html
+++ b/resources/stage/web/creator_rewards.html
@@ -276,7 +276,14 @@
 
 </div>
 
-
+ <!-- FOOTER -->
+ <hr class="featurette-divider">
+ <footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+    &middot; <a href="FAQ">Support</a></p>
+  </footer>
+  
 
 
 
