--- a/resources/stage/web/landing.html
+++ b/resources/stage/web/landing.html
@@ -255,15 +255,17 @@
             </div>
           </div>
 
-          <hr class="featurette-divider">
+          
 
           <!-- /END THE FEATURETTES -->
 
 
           <!-- FOOTER -->
+          <hr class="featurette-divider">
           <footer>
             <p class="pull-right"><a href="#">Back to top</a></p>
-            <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+            &middot; <a href="FAQ">Support</a></p>
           </footer>
 
 
