--- a/resources/stage/web/userdashboard_funds.html
+++ b/resources/stage/web/userdashboard_funds.html
@@ -70,7 +70,7 @@
              <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-                             <li class="dropdown">
+               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="about">About Bitpieces</a></li>
@@ -210,10 +210,18 @@
         </div>
 
       </div><!-- /.row -->
-    </div>
+      <!-- FOOTER -->
+      <hr class="featurette-divider">
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+          &middot; <a href="FAQ">Support</a></p>
+        </footer>
+        
+      </div>
 
-    <!-- end of wrapper -->
-  </div>
+      <!-- end of wrapper -->
+    </div>
 
 
       <!-- Bootstrap core JavaScript
