--- a/resources/stage/web/userdashboard_prices.html
+++ b/resources/stage/web/userdashboard_prices.html
@@ -164,7 +164,14 @@
         </div>
       </div><!-- /.row -->
 
-
+ <!-- FOOTER -->
+ <hr class="featurette-divider">
+ <footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+    &middot; <a href="FAQ">Support</a></p>
+  </footer>
+  
       <!-- end of page -->
     </div>
 
