added creators withdrawals

--- a/resources/stage/web/userdashboard_pieces.html
+++ b/resources/stage/web/userdashboard_pieces.html
@@ -247,6 +247,7 @@
       <script src="highcharts/js/themes/dark-unica.js"></script>
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script src="tablesorter/jquery.tablesorter.js"></script> 
+       <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
