starting to rewrite a lot now

--- a/resources/stage/web/creators_register.html
+++ b/resources/stage/web/creators_register.html
@@ -61,7 +61,7 @@
               <ul class="nav navbar-nav">
                <li><a href="landing">Home</a></li>
                <li><a href="discover">Discover</a></li>
-               <li><a href="creators">Creators</a></li> 
+               <li><a href="creators_register">Creators</a></li> 
                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
@@ -584,7 +584,7 @@
        <script src="tools.js"></script>
        <script src="login.js"></script>
        <script src="userdashboard_settings.js"></script>
-       <script src="creators.js"></script>
+       <script src="creators_register.js"></script>
 
      </body>
      </html>
