--- a/resources/stage/web/discover.html
+++ b/resources/stage/web/discover.html
@@ -66,7 +66,7 @@
               <ul class="nav navbar-nav">
                <li><a href="landing">Home</a></li>
                <li class="active"><a href="/discover">Discover</a></li>
-               <li><a href="creators">Creators</a></li> 
+               <li><a href="creators_register">Creators</a></li> 
                <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
