--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -136,11 +136,11 @@
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
        <a class="list-group-item active" href="creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
-       <a class="list-group-item" href="creator/pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
-       <a class="list-group-item" href="creator/worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
-       <a class="list-group-item" href="creator/rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
-       <a class="list-group-item" href="creator/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
-       <a class="list-group-item" href="creator/pieces" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Pieces</a>
+       <a class="list-group-item" href="creators/pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
+       <a class="list-group-item" href="creators/worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
+       <a class="list-group-item" href="creators/rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
+       <a class="list-group-item" href="creators/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
+       <a class="list-group-item" href="creators/pieces" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Pieces</a>
        <a class="list-group-item" href="userdashboard_prices.html" rel="keep-params"><i class="fa fa-edit"></i> Badges</a>
      </div>
    </div>        
