--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -132,7 +132,7 @@
       </div>
       <div class="list-group">
         <li class="list-group-item">
-         <a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
+         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
        <a class="list-group-item active" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
