--- a/resources/stage/web/creator_settings.html
+++ b/resources/stage/web/creator_settings.html
@@ -64,15 +64,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="landing">BitPieces</a>
+        <a class="navbar-brand" href="/">BitPieces</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        <ul class="nav navbar-nav">
-        <li><a href="landing">Home</a></li>
-        <li><a href="discover">Discover</a></li>
-        <li><a href="creators_register">Creators</a></li> 
+        <li><a href="/">Home</a></li>
+        <li><a href="/discover">Discover</a></li>
+        <li><a href="/creators_register">Creators</a></li> 
         <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
