--- a/resources/stage/web/creatordashboard.html
+++ b/resources/stage/web/creatordashboard.html
@@ -55,13 +55,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="landing">BitPieces</a>
+                <a class="navbar-brand" href="/">BitPieces</a>
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="/carousel">Home</a></li>
-                  <li><a href="discover">Discover</a></li>
-                  <li><a href="creators_register">Creators</a></li> 
+                  <li><a href="/discover">Discover</a></li>
+                  <li><a href="/creators_register">Creators</a></li> 
                   <li><a href="/userdashboard" id="userdashboardhref" class="hide">Dashboard</a></li>
                   <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                   <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
