--- a/resources/stage/web/creators_pages/99.html
+++ b/resources/stage/web/creators_pages/99.html
@@ -57,12 +57,12 @@
  							<span class="icon-bar"></span>
  							<span class="icon-bar"></span>
  						</button>
- 						<a class="navbar-brand" href="landing">BitPieces</a>
+ 						<a class="navbar-brand" href="/">BitPieces</a>
  					</div>
  					<div class="navbar-collapse collapse">
  						<ul class="nav navbar-nav">
- 							<li><a href="landing">Home</a></li>
- 							<li><a href="discover">Discover</a></li>
+ 							<li><a href="/">Home</a></li>
+ 							<li><a href="/discover">Discover</a></li>
  							<li class="active"><a href="/creators">Creators</a></li>
  							<li><a href="/userdashboard" id="dashboardhref" class="hide">Dashboard</a></li>
  							<li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
