--- a/resources/stage/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/stage/web/creators_pages/Leonardo_Davinci.html
@@ -43,14 +43,14 @@
      <!-- Brand and toggle get grouped for better mobile display --> 
      <div class="navbar-header"> 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> 
-      <a class="navbar-brand" href="landing">BitPieces</a> 
+      <a class="navbar-brand" href="/">BitPieces</a> 
      </div> 
      <!-- Collect the nav links, forms, and other content for toggling --> 
      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
       <ul class="nav navbar-nav"> 
-       <li><a href="landing">Home</a></li> 
-       <li><a href="discover">Discover</a></li> 
-       <li><a href="creators_register">Creators</a></li>  
+       <li><a href="/">Home</a></li> 
+       <li><a href="/discover">Discover</a></li> 
+       <li><a href="/creators_register">Creators</a></li>  
        <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li> 
        <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> --> 
