--- a/resources/stage/web/userdashboard_settings.html
+++ b/resources/stage/web/userdashboard_settings.html
@@ -275,14 +275,18 @@
 </div>
 
 
+
+
+</div>
+
 <!-- Change password Modal -->
 
-<div class="modal fade bs-example-modal-lg" id="userloginModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal fade bs-example-modal-lg" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="changePasswordModal">Change Password</h4>
+        <h4 class="modal-title" id="titleasdfsadf">Change Password</h4>
       </div>
 
       <div class="modal-body">
@@ -359,8 +363,6 @@
 </div>
 </div>
 
-
-</div>
 
 
 
