--- a/resources/stage/web/userdashboard_settings.html
+++ b/resources/stage/web/userdashboard_settings.html
@@ -305,7 +305,7 @@
         <div class="form-group">
           <label for="inputPassword3" class="col-sm-2 control-label">Old password</label>
           <div class="col-sm-10">
-            <input name="oldPassword" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+            <input name="oldPassword" type="password" class="form-control" id="inputPassword3" placeholder="Old password"
             data-bv-notempty="true"
             data-bv-notempty-message="The password is required and cannot be empty"
             />
@@ -318,7 +318,7 @@
         <div class="form-group">
           <label for="inputPassword3" class="col-sm-2 control-label">New Password</label>
           <div class="col-sm-10">
-            <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+            <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="New password"
             data-bv-notempty="true"
             data-bv-notempty-message="The password is required and cannot be empty"
 
@@ -342,10 +342,7 @@
           data-bv-identical="true"
           data-bv-identical-field="password"
           data-bv-identical-message="The password and its confirm are not the same"
-
-          data-bv-different="true"
-          data-bv-different-field="username"
-          data-bv-different-message="The password cannot be the same as username" />
+        />
 
 
         </div>
