--- a/resources/stage/web/userdashboard_settings.html
+++ b/resources/stage/web/userdashboard_settings.html
@@ -284,7 +284,7 @@
 
 <!-- Change password Modal -->
 
-<div class="modal fade bs-example-modal-lg" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div id="changePasswordModal" class="modal fade bs-example-modal-lg"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
