--- a/resources/dev/web/discover.html
+++ b/resources/dev/web/discover.html
@@ -200,7 +200,7 @@
                     {{#.}}
 
                     <tr> 
-                      <td><a href="creator_overview?creator={{creators_name}}"> {{creators_name}} </a></td>
+                      <td><a href="/creators/main/{{creators_name}}"> {{creators_name}} </a></td>
                       <td>{{category_names}}</td>
                       <td>{{number_of_backers}}</td>
                       <td>{{worth_current}}</td>
