--- a/resources/web/creator_main.html
+++ b/resources/web/creator_main.html
@@ -263,7 +263,7 @@
     <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-        &middot; <a href="FAQ">Support</a></p>
+        &middot; <a href="/FAQ">Support</a></p>
       </footer>
       
     </div>
@@ -299,7 +299,7 @@
                  <p class="announcement-text">Backers</p>
 
                  <p id="creators_safety_current" class="announcement-heading"></p>
-                 <p class="announcement-text">Safety rating    <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
+                 <p class="announcement-text">Safety rating    <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">
                    <i class="fa fa-info-circle"></i></a></p>
 
                    <p>
