--- a/resources/web/creators_register.html
+++ b/resources/web/creators_register.html
@@ -139,7 +139,7 @@
     <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
       <div class="starter-template">
         <h1>Creator register</h1>
-        <p class="lead">Please read through the entire <a href="FAQ">FAQ</a>, especially about the <a href="FAQ#what_are_rewards">rewards</a> you will owe to your funders,  before signing up and selling pieces. </p>
+        <p class="lead">Please read through the entire <a href="/FAQ">FAQ</a>, especially about the <a href="/FAQ#what_are_rewards">rewards</a> you will owe to your funders,  before signing up and selling pieces. </p>
       </div>
 
       <div class="row">
@@ -435,7 +435,7 @@
   </div>
   <div id="raiseFunds" class="panel-collapse collapse">
     <div class="panel-body">
-      Read through the <a href="FAQ">FAQ</a> to learn about <a href="FAQ#what_are_rewards">rewards</a>. A 0.5% reward percentage is standard for startup projects.<br><br>
+      Read through the <a href="/FAQ">FAQ</a> to learn about <a href="/FAQ#what_are_rewards">rewards</a>. A 0.5% reward percentage is standard for startup projects.<br><br>
       <form id="raiseFundsForm" class="form-horizontal" role="form">
 
         <div class="form-group form-group-lg">
