--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -301,7 +301,7 @@
  <footer>
   <p class="pull-right"><a href="#">Back to top</a></p>
   <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-    &middot; <a href="FAQ">Support</a></p>
+    &middot; <a href="/FAQ">Support</a></p>
   </footer>
   
 </div>
