--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -175,21 +175,21 @@
 
             <i class="fa fa-pencil-square-o fa-5x"></i>
             <h2>Register</h2>
-            <p>Signing up is quick, easy, and free. Learn about the <a href="FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="#">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>.
+            <p>Signing up is quick, easy, and free. Learn about the <a href="/FAQ#what_is_a_creator">creators</a> you could potentially fund, or head over to our <a href="#">test site</a> to learn the ropes, with no real money involved. If you'd like to get some Bitcoins in order to fund creators, head over to <a href="https://coinbase.com/">Coinbase</a>.
             </p>
             <p><a class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <i class="fa fa-btc fa-5x"></i>
             <h2>Buy pieces</h2>
-            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces continuously earn <a href="FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users if they choose. </p>
+            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces continuously earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users if they choose. </p>
             <p><a class="btn btn-default" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <i class="fa fa-trophy fa-5x"></i>
             <h2>Earn rewards</h2>
-            <p>Creators are <b>required</b> to pay <a href="FAQ#what_are_rewards">rewards</a> to their funders, starting out small, and growing as they grow their brand. This, along with a 
-              <a href="FAQ#how_do_i_know_if_a_creator_is_safe">verification system</a>, <a href="FAQ#how_do_i_know_if_a_creator_is_safe">creator safety ratings</a>, and a commenting system that provides a dialog between creators and their funders, builds a <a href="FAQ#why_are_rewards_mandatory">history of trust</a>. Also, funders of projects earn <a href="#">badges</a>  and points for various objectives.</p>
+            <p>Creators are <b>required</b> to pay <a href="/FAQ#what_are_rewards">rewards</a> to their funders, starting out small, and growing as they grow their brand. This, along with a 
+              <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">verification system</a>, <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">creator safety ratings</a>, and a commenting system that provides a dialog between creators and their funders, builds a <a href="/FAQ#why_are_rewards_mandatory">history of trust</a>. Also, funders of projects earn <a href="#">badges</a>  and points for various objectives.</p>
               <p><a class="btn btn-default" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
           </div><!-- /.row -->
@@ -210,7 +210,7 @@
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Fund <span class="text-muted">creativity </span></h2>
-              <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-muted">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-muted">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="FAQ#what_are_rewards">rewards</a> over time. 
+              <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-muted">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-muted">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
               </p>
             </div>
           </div>
@@ -219,7 +219,7 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">The world's first <span class="text-muted">international</span> funding platform</h2>
-              <p class="lead">Using the <a href="FAQ#why_use_bitcoin_instead_of_dollars">bitcoin network</a> as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20</b> <a href="FAQ#how_does_currency_conversion_work">currencies</a>, on an interactive, funding <b>dashboard</b>. Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. <a href="https://coinbase.com/">Coinbase</a> is used as the payment processor, which ensures free transactions within the bitcoin network.
+              <p class="lead">Using the <a href="/FAQ#why_use_bitcoin_instead_of_dollars">bitcoin network</a> as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20</b> <a href="/FAQ#how_does_currency_conversion_work">currencies</a>, on an interactive, funding <b>dashboard</b>. Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. <a href="https://coinbase.com/">Coinbase</a> is used as the payment processor, which ensures free transactions within the bitcoin network.
 
               </p>
             </div>
@@ -236,7 +236,7 @@
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
-              <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Similar to other funding sites, content-creators pay a <b>5%</b> <a href="FAQ#what_are_the_fees">fee</a> on withdrawals. When not using coinbase, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces.
+              <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Similar to other funding sites, content-creators pay a <b>5%</b> <a href="/FAQ#what_are_the_fees">fee</a> on withdrawals. When not using coinbase, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces.
               </p>
             </div>
           </div>
@@ -264,7 +264,7 @@
           <footer>
             <p class="pull-right"><a href="#">Back to top</a></p>
             <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-            &middot; <a href="FAQ">Support</a></p>
+            &middot; <a href="/FAQ">Support</a></p>
           </footer>
 
 
