working on testing home

--- a/resources/web/about.html
+++ b/resources/web/about.html
@@ -135,7 +135,7 @@
          <br><br>
          In addition, smaller content-creators need a way to raise funds, and do so in a way that makes their funders feel safe. While numerous small stock-like exchanges exist, none feel suited for the web, for the type of content people make in today's world, or for low-end content creators who just want to keeping making the things.
          <br><br>
-         <a href="/FAQ">Learn more about Bitpieces</a>
+         <a class="btn btn-default" href="/FAQ" role="button">Learn more &raquo;</a>
 
 
        </div>
@@ -146,7 +146,7 @@
      <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-        &middot; <a href="/FAQ">Support</a></p>
+      &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
       </footer>
       
     </div>
