--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -217,11 +217,11 @@
       </div>
       <!-- FOOTER -->
       <hr class="featurette-divider">
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-          &middot; <a href="/FAQ">Support</a></p>
-        </footer>
+       <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+      &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
+      </footer>
         
 
         <!-- end of page -->
