--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -509,7 +509,7 @@
 
 
            <div class="col-sm-10">
-             <input name="address" type="text" class="form-control" placeholder="Bitcoin Address or Coinbase Email"
+             <input name="address" type="text" class="form-control" disabled placeholder="Bitcoin Address or Coinbase Email"
              >
            </div>
          </div>
