--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -440,15 +440,33 @@
         <h4 class="modal-title">Deposit</h4>
       </div>
       <div id="deposit_div" class="modal-body">
-       <script id="deposit_template" type="x-tmpl-mustache">
-        <iframe src="https://coinbase.com/inline_payments/{{.}}" style="width: 500px; height: 160px; border: none; box-shadow: 0 1px 3px rgba(0,0,0,0.25); overflow: hidden;" scrolling="no" allowtransparency="true" frameborder="0"></iframe>
-      </script>
+        <form id="depositForm" class="form-horizontal" role="form">
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
+            <div class="col-sm-10">
+              <div class="input-group">
+                <div id="depositSymbol" class="input-group-addon">?</div>
+
+                <input name="depositAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
+                data-bv-greaterthan="true"
+                data-bv-greaterthan-value=".01"
+                data-bv-greaterthan-message="Must be > .01"
+                >
+              </div>
+            </div>
+
+
+          </div>
+
+
+         <button id="placedepositBtn" type="submit" class="btn btn-primary">Deposit</button>
+
+       </form>
     </div>
 
   </div>
 </div>
 </div>
-
 <div id="askModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
