fixed discover alert

--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -179,7 +179,7 @@
       <div class="col-lg-3">
         <div class="first-timers alert alert-warning alert-dismissible hide" role="alert">
           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <strong>You have no pieces!</strong> <a href="discover">Discover</a> some creators to fund.
+          <strong>You have no pieces!</strong> <a href="/discover">Discover</a> some creators to fund.
         </div>
       </div>
     </div>
