--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -142,41 +142,7 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <div id="depositModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Deposit</h4>
-      </div>
-      <div id="deposit_div" class="modal-body">
-        <form id="depositForm" class="form-horizontal" role="form">
-          <div class="form-group form-group-lg">
-            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
-            <div class="col-sm-10">
-              <div class="input-group">
-                <div id="depositSymbol" class="input-group-addon">?</div>
-
-                <input name="depositAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
-                data-bv-greaterthan="true"
-                data-bv-greaterthan-value=".01"
-                data-bv-greaterthan-message="Must be > .01"
-                >
-              </div>
-            </div>
-
-
-          </div>
-
-
-         <button id="placedepositBtn" type="submit" class="btn btn-primary">Deposit</button>
-
-       </form>
-    </div>
-
-  </div>
-</div>
-<h1 id="page_title"> <small> price history of pieces owned </small></h1>
+          <h1 id="page_title"><small> price history </small></h1>
           <ol class="breadcrumb">
             <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Prices</li>
