--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -143,7 +143,7 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <h1 id="page_title"></h1> <small> funds </small>
+          <h1 id="page_title"></h1> <h1><small> funds </small></h1>
           <ol class="breadcrumb">
             <li><a href="userdashboard_overview"><i class="fa fa-dashboard"></i> Overview</a></li>
             <li class="active"><i class="fa fa-table"></i> Funds</li>
