--- a/resources/web/creator_overview.html
+++ b/resources/web/creator_overview.html
@@ -225,7 +225,7 @@
               <tr> 
                 <td>{{time_}}</td>
                 <td>{{type}}</td>
-                <td>{{recipient}}</td>
+                <td><a href="/users/overview/{{recipient}}">{{recipient}}</a></td>
                 <td>{{pieces}}</td>
                 <td>{{funds}}</td>
               </tr>
