--- a/resources/testweb/creator_rewards.html
+++ b/resources/testweb/creator_rewards.html
@@ -254,7 +254,7 @@
               {{#.}}
 
               <tr> 
-                <td>{{owners_name}}</td>
+                <td><a href="/users/overview/{{owners_name}}">{{owners_name}}</a></td>
                 <td>{{total_owed}}</td>
               </tr>
               {{/.}}
