--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -238,7 +238,7 @@
               <tr> 
                 <td>{{time_}}</td>
                 <td>{{type}}</td>
-                <td>{{recipient}}</td>
+                <td><a href="/users/overview/{{recipient}}">{{recipient}}</a></td>
                 <td>{{funds}}</td>
               </tr>
               {{/.}}
