--- a/resources/web/creator_pieces.html
+++ b/resources/web/creator_pieces.html
@@ -275,7 +275,7 @@
               {{#.}}
 
               <tr> 
-                <td>{{users_username}}</td>
+                <td><a href="/users/overview/{{users_username}}">{{users_username}}</a></td>
                 <td>{{pieces_total}}</td>
                 <td>{{value_total_current}}</td>
               </tr>
