--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -230,7 +230,7 @@
 
               <tr> 
                 <td>{{time_}}</td>
-                <td>{{users_name}}</td>
+                <td><a href="/users/overview/{{users_name}}">{{users_name}}</a></td>
                 <td>{{type}}</td>
                 <td>{{pieces}}</td>
                 <td>{{price_per_piece}}</td>
