--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -789,7 +789,7 @@
           <div class="col-sm-10">
             <div class="input-group">
              <span name="curr_iso" class="input-group-addon">$</span>    
-             <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="Price per piece"
+             <input name="raisePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="Price per piece"
 
              data-bv-notempty="true"
              data-bv-notempty-message="Must be > 0"
@@ -808,7 +808,7 @@
        <div class="form-group form-group-lg">
         <label class="col-sm-2 control-label" for="formGroupInputLarge">Pieces</label>
         <div class="col-sm-10">
-          <input name="issuePieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
+          <input name="raisePieces" class="form-control" type="text" id="formGroupInputLarge" placeholder="Pieces"
           type="text" 
           data-bv-integer="true"
           data-bv-integer-message="Must be a whole number"
@@ -828,7 +828,7 @@
       <div class="form-group form-group-lg">
 
        <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
-       <div id="issueTotal" class="col-sm-10 form-control-static">
+       <div id="raiseTotal" class="col-sm-10 form-control-static">
 
        </div>
      </div>
