--- a/resources/testweb/creator_overview.html
+++ b/resources/testweb/creator_overview.html
@@ -848,7 +848,7 @@
      <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button id="raiseFundsBtn" type="submit" class="btn btn-primary" 
-        >Take me to my page</button>
+        >Raise funds/button>
       </div>
     </div>
 
