--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -205,7 +205,7 @@
                       <td>{{number_of_backers}}</td>
                       <td>{{worth_current}}</td>
                       <td>{{price_current}}</td>
-                      <td>{{reward_per_piece_per_year}}</td>
+                      <td>{{reward_current}}</td>
                       <td>{{reward_yield_current}}</td>
                     </tr>
                     {{/.}}
