commenting out the different logins

--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -240,7 +240,7 @@
           </div>
         </form>
 
-        <!-- The different sign ins -->
+        <!-- The different sign ins 
         <table style="width:100%">
           <tr>
             <td>
@@ -265,7 +265,7 @@
       </a>
     </td>
   </tr>
-</table>
+</table>-->
 <hr>
 <h3> Register </h3>
 
