--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -130,9 +130,9 @@
             <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
           </li>
 
-          <a class="list-group-item active" href="/users/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
-          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-table"></i> Pieces</a>
-          <a class="list-group-item" href="/users/prices" rel="keep-params"><i class="fa fa-edit"></i> Prices</a>
+          <a class="list-group-item active" href="/users/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
+          <a class="list-group-item" href="/users/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+          <a class="list-group-item" href="/users/prices" rel="keep-params"><i class="fa fa-dollar"></i> Prices</a>
         </div>
       </div>        
     </div>
