changing creator register page

--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -109,33 +109,9 @@
 
    <!-- The full page with teh sidebar -->
    <div class="container-fluid">
-     <div class="row">
-
-      <!-- The sidebar -->
-      <div id="side_col" class="col-md-2 sidebar">
-
-        <div class="mini-submenu">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </div>
-        <div id="scroll-nav" class="list-group">
-
-          <li class="list-group-item">
-            <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
-            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
-          </li>
-
-          <a class="list-group-item" href="#registerCreator"><i class="fa fa-bar-chart-o"></i> Register</a>
-          <a class="list-group-item" href="#categories"><i class="fa fa-table"></i> Categories</a>
-          <a class="list-group-item" href="#units"><i class="fa fa-table"></i> Settings</a>
-
-        </div>
-      </div>        
-    </div>
 
     <!-- The Page -->
-    <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+    <div id="main_col" class="col-md-12">
       <div class="starter-template">
         <h1>Creator register</h1>
         <p class="lead">Please read through the entire <a href="/FAQ">FAQ</a>, especially about the <a href="/FAQ#what_are_rewards">rewards</a> you will owe to your funders,  before signing up and selling pieces. </p>
