--- a/resources/testweb/creators_register.html
+++ b/resources/testweb/creators_register.html
@@ -108,7 +108,7 @@
    </nav>
 
    <!-- The full page with teh sidebar -->
-   <div class="container-fluid">
+   <div class="container">
 
     <!-- The Page -->
     <div id="main_col" class="col-md-12">
