--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-          <a href="/users/funds">
+          <a href="/users/funds" rel="keep-params">
             <div class="panel-footer announcement-bottom">
               <div class="row">
                 <div class="col-xs-6">
@@ -235,7 +235,7 @@
               </div>
             </div>
           </div>
-          <a href="#">
+          <a href="/users/pieces" rel="keep-params">
             <div class="panel-footer announcement-bottom">
               <div class="row">
                 <div class="col-xs-6">
@@ -266,7 +266,7 @@
               </div>
             </div>
           </div>
-          <a href="/users/pieces">
+          <a href="/users/pieces" rel="keep-params">
             <div class="panel-footer announcement-bottom">
               <div class="row">
                 <div class="col-xs-6">
@@ -298,7 +298,7 @@
               </div>
             </div>
           </div>
-          <a href="/users/pieces">
+          <a href="/users/pieces" rel="keep-params">
             <div class="panel-footer announcement-bottom">
               <div class="row">
                 <div class="col-xs-6">
