--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -11,6 +11,9 @@
 
   <title>Bitpieces</title>
 
+  <!-- favicon -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
   <!-- Bootstrap core CSS -->
   <link href="darkly.bootstrap.min.css" rel="stylesheet">
 
