more link fixing

--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -191,7 +191,7 @@
   <div class="col-md-12">
 
     <ol class="breadcrumb">
-      <li><a href="creator_overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
+      <li><a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
       <li class="active"><i class="fa fa-table"></i> Funds</li>
     </ol>
   </div>
