--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -334,7 +334,7 @@
                  </div>
                </div>
              </div>
-             <a href="creator_overview" rel="keep-params">
+             <a href="/creators/overview" rel="keep-params">
               <div class="panel-footer announcement-bottom">
                 <div class="row">
                   <div class="col-xs-6">
