deposit form stating that its fake

--- a/resources/testweb/creator_worth.html
+++ b/resources/testweb/creator_worth.html
@@ -393,6 +393,7 @@
       </div>
       <div id="deposit_div" class="modal-body">
         <form id="depositForm" class="form-horizontal" role="form">
+          This is a fake deposit form: type in any amount you like.
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
