--- a/resources/testweb/userdashboard_overview.html
+++ b/resources/testweb/userdashboard_overview.html
@@ -453,6 +453,7 @@
       </div>
       <div id="deposit_div" class="modal-body">
         <form id="depositForm" class="form-horizontal" role="form">
+          This is a fake deposit form: type in any amount you like.
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
@@ -490,6 +491,7 @@
       </div>
       <div class="modal-body">
         <form id="withdrawForm" class="form-horizontal" role="form">
+          This is a fake withdrawal form: type in any amount you like.
           <div class="form-group form-group-lg">
             <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
             <div class="col-sm-10">
